--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Navbar Example</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css"/>
+    
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg ">
+        <a class="navbar-brand text-white" href="#">
+            <img src="./icon.jpeg" width="30" height="30"  border-radius ="50px" class="d-inline-block align-top" alt="">
+            FilmVerse
+          </a>
+        <div class="collapse navbar-collapse m-2" id="navbarNav">
+            <ul class="navbar-nav center-nav mx-auto">
+                <li class="nav-item active">
+                  <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Movies</a>
+                </li>
+               
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Contact</a>
+                </li>
+              </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Cities
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Hyderabad</a>
+                        <a class="dropdown-item" href="#">Chennai</a>
+                        <a class="dropdown-item" href="#">Bangalore</a>
+                        <a class="dropdown-item" href="#">Mumbai</a>
+                        <a class="dropdown-item" href="#">Delhi</a>
+                    </div>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link btn btn-outline-light" href="#">Sign In</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container"> 
+    <div class="left">
+        <h1>Book Your Tickets Online</h1>
+        <button class="btn btn-warning">SHOW MORE</button>
+    </div>
+    <div class="right">
+        <img src="./images/image1.webp"  alt="Background Image">
+    </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
