--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Example</title>
+    <title>FVR</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css"/>
     
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ">
         <a class="navbar-brand text-white" href="#">
-            <img src="./icon.jpeg" width="30" height="30"  border-radius ="50px" class="d-inline-block align-top" alt="">
+            <img src="./images/ticket.png" width="30" height="30"  border-radius ="50px" class="d-inline-block align-top" alt="">
             FilmVerse
           </a>
         <div class="collapse navbar-collapse m-2" id="navbarNav">
@@ -44,20 +44,49 @@
                     </div>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link btn btn-outline-light" href="#">Sign In</a>
+                    <a class="nav-link btn btn-outline-light" href="./login.html">Sign In</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="container"> 
     <div class="left">
-        <h1>Book Your Tickets Online</h1>
-        <button class="btn btn-warning">SHOW MORE</button>
+      <h1 >Welcome to FilmVerse</h1>
+      <p>Discover movies, book tickets, and enjoy seamless entertainment from the comfort of your home!</p>
+      <br/>
+        <a href="./login.html">Login</a>
+        <a href="./register.html">Register</a>
     </div>
     <div class="right">
         <img src="./images/image1.webp"  alt="Background Image">
     </div>
     </div>
+    <div class="container2">
+    <div class="container mt-8">
+      <h2 class="text-center p-5 m-2">Why Choose FilmVerse?</h2>
+      <div class="row mt-4">
+          <div class="col-md-4 p-2 text-center">
+              <img src="./images/easybooking.png" class="mb-3" alt="Easy Booking" width="100">
+              <h5 class="">Easy Booking</h5>
+              <p class="">Book your favorite movie tickets with just a few clicks.</p>
+          </div>
+          <div class="col-md-4 p-2 text-center">
+              <img src="./images/video-editing.png" class="mb-3" alt="Wide Selection" width="100">
+              <h5 class="">Wide Selection of Movies</h5>
+              <p class="">From blockbusters to indie films, find the movies you love.</p>
+          </div>
+          <div class="col-md-4 p-2 text-center">
+              <img src="./images/payment-method.png" class="mb-3" alt="Secure Payments" width="100">
+              <h5 class="">Secure Payments</h5>
+              <p class="">Your transactions are safe and secure with our trusted partners.</p>
+          </div>
+      </div>
+      </div>
+    </div>
+
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+      <p>&copy; 2024 FilmVerse | All Rights Reserved</p>
+  </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
