--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                   <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Movies</a>
+                  <a class="nav-link text-white" href="./login.html">Movies</a>
                 </li>
                
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">About</a>
+                  <a class="nav-link text-white" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Contact</a>
+                  <a class="nav-link text-white" href="./contact.html">Contact</a>
                 </li>
               </ul>
             <ul class="navbar-nav ml-auto">
